--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "my_photos.jpg"
   name             : ""
   pronouns         : # example: "she/her"  
-  bio              : "MS Student at IIT Bombay"
+  bio              : "PhD Student at IIT Bombay"
   location         : "Mumbai"
   employer         : "IIT Bombay"
   uri              : # URL
